Fix mobile spacing for the text pages

--- a/src/assets/scss/elements/images.scss
+++ b/src/assets/scss/elements/images.scss
@@ -1,8 +1,10 @@
 .homepage-image {
   margin-left: auto;
+  margin-right: 2.2em;
   max-width: 235px;
 
   @media (min-width: $screen-sm) {
+    margin-right: 0;
     margin-top: 5px;
     height: 100%;
     position: absolute;
